<resources>
    <string name="app_name">FitnessApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_rutina">Rutinas</string>
    <string name="menu_dieta">Dietas</string>
    <string name="menu_mientrenamiento">Mi Entrenamiento</string>
    <string name="menu_minutricion">Mi Nutricion</string>
    <string name="menu_salir">Cerrar Sesion</string>
</resources>
